--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'com.google.ar:core:1.9.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.9.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
